
  o Minor bugfixes:
    - The fix in 0.2.0.12-alpha cleared the "hsdir" flag in v3 network
      consensus documents when there are too many relays at a single
      IP address. Now clear it in v2 network status documents too.
    - Don't crash if we get an unexpected value for the
      PublishServerDescriptor config option. Reported by Matt Edman;
      bugfix on 0.2.0.9-alpha.


Changes in version 0.2.0.12-alpha - 2007-11-16
  This twelfth development snapshot fixes some more build problems as
  well as a few minor bugs.

  o Compile fixes:
    - Make it build on OpenBSD again. Patch from tup.
    - Substitute BINDIR and LOCALSTATEDIR in scripts. Fixes
      package-building for Red Hat, OS X, etc.

  o Minor bugfixes (on 0.1.2.x):
    - Changing the ExitPolicyRejectPrivate setting should cause us to
      rebuild our server descriptor.

  o Minor bugfixes (on 0.2.0.x):
    - When we're lacking a consensus, don't try to perform rendezvous
      operations. Reported by Karsten Loesing.
    - Fix a small memory leak whenever we decide against using a
      newly picked entry guard. Reported by Mike Perry.
    - When authorities detected more than two relays running on the same
      IP address, they were clearing all the status flags but forgetting
      to clear the "hsdir" flag. So clients were being told that a
      given relay was the right choice for a v2 hsdir lookup, yet they
      never had its descriptor because it was marked as 'not running'
      in the consensus.
    - If we're trying to fetch a bridge descriptor and there's no way
      the bridge authority could help us (for example, we don't know
      a digest, or there is no bridge authority), don't be so eager to
      fall back to asking the bridge authority.
    - If we're using bridges or have strictentrynodes set, and our
      chosen exit is in the same family as all our bridges/entry guards,
      then be flexible about families.

  o Minor features: